apply plugin: 'com.android.application'

project.ext {
    archLifecycleVersion = "1.1.1"
}

android {
    compileSdkVersion 30
    buildToolsVersion '28.0.3'

    defaultConfig {
        applicationId "com.snowplowanalytics.snowplowtrackerdemo"
        minSdkVersion 16
        targetSdkVersion 30
        versionCode 3
        versionName "0.3.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            testCoverageEnabled = true
        }
    }

    applicationVariants.all { variant ->
        variant.outputs.each { output ->
            output.outputFileName = "snowplow-demo-app-${output.baseName}.apk"
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }

    lintOptions {
        abortOnError false
    }
}

dependencies {
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation project(':snowplow-android-tracker')
    implementation 'androidx.browser:browser:1.3.0'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'com.squareup.okhttp3:okhttp:4.0.0'
    implementation 'com.google.code.gson:gson:2.8.5'
}
